--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <div class="container">
         <img src="assets/dog.png" alt="Random Dog Facts Logo" class="logo">  <h1>Random Dog Facts Generator</h1>
         </div>
-      <div class="project-description">
-        <p>This project fetches fun and fascinating facts about our canine friends! There is still no other dog facts API while there are many APIs supporting cat facts. It is unfair!!! This project will fetch random dog facts using the provided dog facts API. It could be used to create a fun website or app that displays a new interesting dog fact to the user below.
+        <div class="project-description">
+          <p>This project fetches fun and fascinating facts about our canine friends!
+          This project will fetch random dog facts using the dog facts API.
+          It is a fun website that displays a new interesting dog fact to the you.</p>
+          <p>Hope all dog lovers out there enjoy this one! :)</p>
       <div class="fact-container">
         <p id="fact"></p>
         <button id="fetch-fact">Generate Fact!</button>
     </div>
-    <script src="bleh.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
