--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="project-description">
           <p>This project fetches fun and fascinating facts about our canine friends!
           This project will fetch random dog facts using the dog facts API.
-          It is a fun website that displays a new interesting dog fact to the you.</p>
+          It is a fun website that displays a new interesting dog fact to you below.</p>
           <p>Hope all dog lovers out there enjoy this one! :)</p>
       <div class="fact-container">
         <p id="fact"></p>
-        <button id="fetch-fact">Generate Fact!</button>
+        <button id="fetch-fact">Get random fact!</button>
     </div>
     <script src="index.js"></script>
   </body>
