--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <button id="fetch-fact">Get random fact!</button>
     </div>
     <script src="index.js"></script>
+    <footer>
+      <p>Made by Jalenzz</p>
+    </footer>
   </body>
 </html>
