Added a woof sound effect and button timeout

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   </head>
   <body>
     <div class="container">
-        <img src="assets/dog.png" alt="Random Dog Facts Logo" class="logo">  <h1>Random Dog Facts Generator</h1>
-        </div>
-        <div class="project-description">
-          <p>This project fetches fun and fascinating facts about our canine friends!
-          This project will fetch random dog facts using the dog facts API.
-          It is a fun website that displays a new interesting dog fact to you below.</p>
-          <p>Hope all dog lovers out there enjoy this one! :)</p>
-      <div class="fact-container">
-        <p id="fact"></p>
-        <button id="fetch-fact">Get random fact!</button>
+      <div class="logo-container">
+        <img src="assets/images/dog.png" alt="Random Dog Facts Logo" class="logo">
+      </div>
+      <h1>Random Dog Facts Generator</h1>
     </div>
+          <div class="project-description">
+            <p>Explore and learn fun facts about our canine friends with this Random Dog Facts Generator! This project uses the dog facts API to fetch and display a different interesting fact about dogs each time you click the button. As a dog lover, I hope this simple yet engaging website brings a smile to your face and deepens your appreciation for our furry companions.</p>
+        <div class="fact-container">
+          <p id="fact"></p>
+          <audio id="woof-sound" src="assets/audio/woof.mp3"></audio>
+          <button id="fetch-fact">Get random fact!</button>
+      </div>
     <script src="index.js"></script>
     <footer>
       <p>Made by Jalenzz</p>
