--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="logo-container">
-        <img src="assets/images/dog.png" alt="Random Dog Facts Logo" class="logo">
+        <img src="Images/dog.png" alt="Random Dog Facts Logo" class="logo">
       </div>
       <h1>Random Dog Facts Generator</h1>
     </div>
@@ -20,12 +20,12 @@
             <p>Explore and learn fun facts about our canine friends with this Random Dog Facts Generator! This project uses the dog facts API to fetch and display a different interesting fact about dogs each time you click the button. As a dog lover, I hope this simple yet engaging website brings a smile to your face and deepens your appreciation for our furry companions.</p>
         <div class="fact-container">
           <p id="fact"></p>
-          <audio id="woof-sound" src="assets/audio/woof.mp3"></audio>
+          <audio id="woof-sound" src="Audio/woof.mp3"></audio>
           <button id="fetch-fact">Get random fact!</button>
       </div>
     <script src="index.js"></script>
     <footer>
-      <p>Made by Jalenzz</p>
+      <p>Made by Jalenzzz</p>
     </footer>
   </body>
 </html>
